test/files/neg/t7669.check
t7669.scala:11: warning: match may not be exhaustive.
It would fail on the following input: NotHandled(_)
  def exhausto(expr: Expr): Unit = expr match {
                                   ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
